windowmanager written in plain C. There are of course also strong
influences from my experiences with the former kwm.


In 0.10:
--------
  patchlevel 10:
       - internal changes to module registration. (Needs the newest
         libkdecore to work)
       - Alt-MouseButton fix: works regardless NumLock/Capslock now
       - correct cursorfont for Alt-RMB rsize and Alt-LMB move
  patchlevel 9:
       - small fix for kwm modules
       - further qt-1.3 changes: with 1.3 the mouse sometimes hang
         for the global modal dialogs (session manager et. al.)
  patchlevel 8:
       - needs qt-1.3
       - for modules: 
            KWM_WIN_DESKTOP handling fixed
            KWM_DESKTOP_NAME_CHANGE and KWM_DESKTOP_NUMBER_CHANGE
       - some smaller improvements

  patchlevel 7:
       - improved KConfig handling (uses strlists :-)
       - small bugfix with module registration (introduced with some cleanups
         in the previous patchlevel...)
       - cleaner pushButton class (behaves slightly different now)

  patchlevel 6:
       - small fix to execute(...);
       - maximizeButton has different semantics for LMB, MMB and RMB
         (README updated)

  patchlevel 5
       - should work under qt-1.3 AND qt-1.2 now. Qt-1.2 support needs
         some dirty lowlevel X-Hacks and will probably be removed as
         soon as qt-1.3 will be KDE's offical qt-version.
       - Tab-Box uses three different horizontal sizes now.


  patchlevel 4
       - small bug with buttons remaining raised fixed. Was introduced
         in the previous patchlevel with the avoid-flickering patch:(

  patchlevel 3:
       - session management can handle even crappy missbehaving clients
         like xfig, which destroy their window instead of saving theirselfs.
         kwm even enables the proxy (if possible) for those lying programs.
         (Please do not look at the hacks necessary to support this rubbish)
       - no more flickering with opaque move and FocusFollowMouse